--- a/cabal.project
+++ b/cabal.project
@@ -2,7 +2,7 @@ packages: numhask.cabal
 
 -- package-id numhask-0.7.0.1-inplace
 -- https://github.com/haskell/cabal/issues/6087
--- write-ghc-environment-files: always
+write-ghc-environment-files: always
 
 -- Might be helpful when hackage doesn't build properly...
 keep-going: True
