Removed test and doctest, added docspec to ci.

--- a/haskell-ci.config
+++ b/haskell-ci.config
@@ -2,22 +2,16 @@
 cabal-install-version: 3.4
 
 -- distribution version (xenial, bionic)
-distribution: xenial
+distribution: bionic
 
 -- Skip separate dependency installation step
 install-dependencies: False
-
--- Build tests with
-tests: True
-
--- Run tests with (note: only built tests are run)
-run-tests: True
 
 -- Haddock step
 haddock: True
 
 -- Build without tests and benchmarks
-no-tests-no-benchmarks: False
+no-tests-no-benchmarks: True
 
 -- Make unconstrained build
 unconstrained: False
@@ -34,17 +28,8 @@ ghc-head: True
 -- Allow failures of particular GHC version
 allow-failures: False
 
--- Enable Doctest job
-doctest: True
-
--- Additional Doctest options
-doctest-options:
-
--- Doctest version
-doctest-version: ^>=0.18
-
 -- Enable Docspec job
-docspec: False
+docspec: True
 
 -- Additional Docspec options
 docspec-options:
