Manually added ghc-head

--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -26,6 +26,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - compiler: ghc-head
+            allow-failure: true
           - compiler: ghc-9.0.1
             allow-failure: false
           - compiler: ghc-8.10.4
