Fixes for 9.2 rc1

--- a/haskell-ci.config
+++ b/haskell-ci.config
@@ -1,6 +1,9 @@
 --- The name of GitHub Action
 github-action-name: haskell-ci
 
+-- Disable email notifications
+email-notifications: False
+
 -- cabal-install version for all jobs
 cabal-install-version: 3.4
 
@@ -17,7 +20,8 @@ no-tests-no-benchmarks: True
 unconstrained: True
 
 -- Add ghc-head job
-ghc-head: True
+-- not supported right now. https://github.com/haskell-CI/haskell-ci/issues/458
+ghc-head: False
 
 -- Allow failures of particular GHC version
 allow-failures: False
@@ -32,9 +36,9 @@ jobs: 2:2
 -- This is useful if you want limit jobs beyond tested-with specification,
 -- e.g. while iterating the CI setup itself.
 linux-jobs: >=8.10
-
--- macOS job
-macos-jobs: ==8.10.*
+-- macos-jobs: ==8.10.*
+-- windows not yet supported
+-- windows-jobs: ==8.10.*
 
 -- on Linux we can use ghcup to setup (some) of jobs
 ghcup-jobs: >=9
