--- a/haskell-ci.config
+++ b/haskell-ci.config
@@ -27,7 +27,7 @@ ghc-head: False
 allow-failures: False
 
 -- Enable Docspec job
-docspec: True
+docspec: ==9.2.0.20210821
 docspec-options: --verbose --timeout 2
 
 -- from haskell-ci project
@@ -35,7 +35,7 @@ jobs: 2:2
 
 -- This is useful if you want limit jobs beyond tested-with specification,
 -- e.g. while iterating the CI setup itself.
-linux-jobs: >=8.10
+linux-jobs: >=9
 -- macos-jobs: ==8.10.*
 -- windows not yet supported
 -- windows-jobs: ==8.10.*
