--- a/numhask.cabal
+++ b/numhask.cabal
@@ -1,71 +1,47 @@
-cabal-version: 2.4
-name: numhask
-version: 0.8.1.0
-synopsis:
-  A numeric class hierarchy.
+cabal-version:      2.4
+name:               numhask
+version:            0.9.0.0
+synopsis:           A numeric class hierarchy.
 description:
-    This package provides alternative numeric classes over Prelude.
-    .
-    The numeric class constellation looks somewhat like:
-    .
-    ![nh](docs/other/nh.svg)
-    .
-    == Usage
-    .
-    >>> {-# LANGUAGE RebindableSyntax #-}
-    >>> import NumHask.Prelude
-    .
-    See "NumHask" for a detailed overview.
+  This package provides alternative numeric classes over Prelude.
+  .
+  The numeric class constellation looks somewhat like:
+  .
+  ![nh](docs/other/nh.svg)
+  .
+  == Usage
+  .
+  >>> {-# LANGUAGE RebindableSyntax #-}
+  >>> import NumHask.Prelude
+  .
+  See "NumHask" for a detailed overview.
 
-category:
-  mathematics
-homepage:
-  https://github.com/tonyday567/numhask#readme
-bug-reports:
-  https://github.com/tonyday567/numhask/issues
-author:
-  Tony Day
-maintainer:
-  tonyday567@gmail.com
-copyright:
-  Tony Day
-license:
-  BSD-3-Clause
-license-file:
-  LICENSE
-build-type:
-  Simple
-tested-with:
-  GHC ==8.8.4
-   || ==8.10.4
-   || ==9.0.1
-   || ==9.2.0.20210821
-extra-doc-files:
-  other/*.svg
-
-extra-source-files:
-  ChangeLog.md
+category:           mathematics
+homepage:           https://github.com/tonyday567/numhask#readme
+bug-reports:        https://github.com/tonyday567/numhask/issues
+author:             Tony Day
+maintainer:         tonyday567@gmail.com
+copyright:          Tony Day
+license:            BSD-3-Clause
+license-file:       LICENSE
+build-type:         Simple
+tested-with:        GHC ==8.8.4 || ==8.10.7 || ==9.2.1
+extra-doc-files:    other/*.svg
+extra-source-files: ChangeLog.md
 
 source-repository head
-  type:
-    git
-  location:
-    https://github.com/tonyday567/numhask
-  subdir:
-    numhask
+  type:     git
+  location: https://github.com/tonyday567/numhask
+  subdir:   numhask
+
 library
-  hs-source-dirs:
-    src
+  hs-source-dirs:   src
   ghc-options:
-    -Wall
-    -Wcompat
-    -Wincomplete-record-updates
-    -Wincomplete-uni-patterns
-    -Wredundant-constraints
-    -fwrite-ide-info
+    -Wall -Wcompat -Wincomplete-record-updates
+    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
     -hiedir=.hie
-  build-depends:
-    base >=4.7 && <5
+
+  build-depends:    base >=4.7 && <5
   exposed-modules:
     NumHask
     NumHask.Algebra.Additive
@@ -81,5 +57,6 @@ library
     NumHask.Data.Rational
     NumHask.Exception
     NumHask.Prelude
+
   other-modules:
   default-language: Haskell2010
