--- a/numhask.cabal
+++ b/numhask.cabal
@@ -40,7 +40,7 @@ library
     -Wall -Wcompat -Wincomplete-record-updates
     -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
     -hiedir=.hie
-
+  x-docspec-extra-packages: QuickCheck
   build-depends:    base >=4.7 && <5
   exposed-modules:
     NumHask
@@ -60,3 +60,10 @@ library
 
   other-modules:
   default-language: Haskell2010
+
+test-suite doctests
+    type:             exitcode-stdio-1.0
+    main-is:          doctests.hs
+    hs-source-dirs:   test
+    default-language: Haskell2010
+    build-depends:    base, QuickCheck
