--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -78,4 +78,4 @@ jobs:
           stack build --test --no-install-ghc --system-ghc
       - if: matrix.docspec
         name: run cabal-docspec
-        run: cabal-docspec
+        run: cabal-docspec --check-properties
