--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        ghc: ['8.8.4', '8.10.7', '9.2.1']
+        ghc: ['8.6.5', '8.8.4', '8.10.7', '9.2.2']
         os: [ubuntu-latest]
         manager: ['cabal']
         docspec: [false]
