--- a/numhask.cabal
+++ b/numhask.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               numhask
-version:            0.10.1.0
+version:            0.10.1.1
 synopsis:           A numeric class hierarchy.
 description:
   This package provides alternative numeric classes over Prelude.
@@ -25,7 +25,9 @@ copyright:          Tony Day
 license:            BSD-3-Clause
 license-file:       LICENSE
 build-type:         Simple
-tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.2
+tested-with:
+  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.5 || ==9.4.4
+
 extra-doc-files:    other/*.svg
 extra-source-files: ChangeLog.md
 
@@ -36,14 +38,12 @@ source-repository head
 
 library
   hs-source-dirs:           src
-  
   ghc-options:
     -Wall -Wcompat -Wincomplete-record-updates
-    -Wincomplete-uni-patterns -Wredundant-constraints 
-    
-  if impl(ghc >= 8.8)
-    ghc-options:       
-      -fwrite-ide-info -hiedir=.hie
+    -Wincomplete-uni-patterns -Wredundant-constraints
+
+  if impl(ghc >=8.8)
+    ghc-options: -fwrite-ide-info -hiedir=.hie
 
   x-docspec-extra-packages: QuickCheck
   build-depends:            base >=4.7 && <5
