--- a/numhask.cabal
+++ b/numhask.cabal
@@ -1,6 +1,6 @@
-cabal-version:      2.4
+cabal-version:      3.4
 name:               numhask
-version:            0.10.1.1
+version:            0.11
 synopsis:           A numeric class hierarchy.
 description:
   This package provides alternative numeric classes over Prelude.
@@ -11,6 +11,7 @@ description:
   .
   == Usage
   .
+  >>> {-# LANGUAGE GHC2021 #-}
   >>> {-# LANGUAGE RebindableSyntax #-}
   >>> import NumHask.Prelude
   .
@@ -26,7 +27,7 @@ license:            BSD-3-Clause
 license-file:       LICENSE
 build-type:         Simple
 tested-with:
-  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.5 || ==9.4.4
+  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4 || ==9.6.1
 
 extra-doc-files:    other/*.svg
 extra-source-files: ChangeLog.md
@@ -36,17 +37,84 @@ source-repository head
   location: https://github.com/tonyday567/numhask
   subdir:   numhask
 
-library
-  hs-source-dirs:           src
+common ghc2021-stanza
+  if impl(ghc >=9.2)
+    default-language:
+      GHC2021
+  if impl(ghc <9.2)
+    default-language:
+      Haskell2010
+    default-extensions:
+      BangPatterns
+      BinaryLiterals
+      ConstrainedClassMethods
+      ConstraintKinds
+      DeriveDataTypeable
+      DeriveFoldable
+      DeriveFunctor
+      DeriveGeneric
+      DeriveLift
+      DeriveTraversable
+      DoAndIfThenElse
+      EmptyCase
+      EmptyDataDecls
+      EmptyDataDeriving
+      ExistentialQuantification
+      ExplicitForAll
+      FlexibleContexts
+      FlexibleInstances
+      ForeignFunctionInterface
+      GADTSyntax
+      GeneralisedNewtypeDeriving
+      HexFloatLiterals
+      ImplicitPrelude
+      InstanceSigs
+      KindSignatures
+      MonomorphismRestriction
+      MultiParamTypeClasses
+      NamedFieldPuns
+      NamedWildCards
+      NumericUnderscores
+      PatternGuards
+      PolyKinds
+      PostfixOperators
+      RankNTypes
+      RelaxedPolyRec
+      ScopedTypeVariables
+      StandaloneDeriving
+      StarIsType
+      TraditionalRecordSyntax
+      TupleSections
+      TypeApplications
+      TypeOperators
+      TypeSynonymInstances
+  if impl(ghc <9.2) && impl(ghc >=8.10)
+    default-extensions:
+      ImportQualifiedPost
+      StandaloneKindSignatures
+
+common ghc-options-stanza
   ghc-options:
-    -Wall -Wcompat -Wincomplete-record-updates
-    -Wincomplete-uni-patterns -Wredundant-constraints
-
+    -Wall
+    -Wcompat
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wredundant-constraints
   if impl(ghc >=8.8)
-    ghc-options: -fwrite-ide-info -hiedir=.hie
+    ghc-options:
+      -fwrite-ide-info
+      -hiedir=.hie
 
-  x-docspec-extra-packages: QuickCheck
-  build-depends:            base >=4.7 && <5
+library
+  import: ghc2021-stanza
+  import: ghc-options-stanza
+  hs-source-dirs: src
+  default-extensions:
+    RebindableSyntax
+  build-depends:
+    base >=4.7 && <5,
+    -- just here for cabal-docspec
+    QuickCheck >=2.14 && <3
   exposed-modules:
     NumHask
     NumHask.Algebra.Additive
@@ -64,13 +132,4 @@ library
     NumHask.Prelude
 
   other-modules:
-  default-language:         Haskell2010
 
-test-suite doctests
-  type:             exitcode-stdio-1.0
-  main-is:          doctests.hs
-  hs-source-dirs:   test
-  default-language: Haskell2010
-  build-depends:
-    , base
-    , QuickCheck
