Added ormolu run to CI

--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,6 +8,7 @@ jobs:
         ghc: ['8.6.5', '8.8.4', '8.10.7', '9.0.2', '9.2.7', '9.4.4', '9.6.1']
         os: [ubuntu-latest]
         docspec: [false]
+        ormolu: [false]
         experimental: [false]
         include:
           - os: windows-latest
@@ -17,9 +18,13 @@ jobs:
             ghc: '9.6.1'
             experimental: true
           - os: ubuntu-latest
-            ghc: '9.4.4'
+            ghc: '9.6.1'
             experimental: true
             docspec: true
+          - os: ubuntu-latest
+            ghc: '9.6.1'
+            experimental: true
+            ormolu: true
     continue-on-error: true
     name: ghc ${{ matrix.ghc }} ${{ matrix.os }}
     steps:
@@ -44,6 +49,9 @@ jobs:
           rm -f cabal-docspec.xz
           chmod a+x $HOME/.cabal/bin/cabal-docspec
           $HOME/.cabal/bin/cabal-docspec --version
+      - if: matrix-ormolu
+        name: ormolu
+        uses: haskell-actions/run-ormolu@v11
       - name: cabal build
         run: |
           cabal update
