--- a/numhask.cabal
+++ b/numhask.cabal
@@ -111,7 +111,8 @@ library
   hs-source-dirs: src
   default-extensions:
     RebindableSyntax
-    NoImportQualifiedPost
+    if impl(ghc >=8.10)
+      NoImportQualifiedPost
   build-depends:
     base >=4.7 && <5,
     -- just for cabal-docspec
