--- a/numhask.cabal
+++ b/numhask.cabal
@@ -111,7 +111,8 @@ library
   hs-source-dirs: src
   default-extensions:
     RebindableSyntax
-    if impl(ghc >=8.10)
+  if impl(ghc >=8.10)
+    default-extensions:
       NoImportQualifiedPost
   build-depends:
     base >=4.7 && <5,
