--- a/numhask.cabal
+++ b/numhask.cabal
@@ -111,12 +111,13 @@ library
   hs-source-dirs: src
   default-extensions:
     RebindableSyntax
+  -- keeping ormolu happy
   if impl(ghc >=8.10)
     default-extensions:
       NoImportQualifiedPost
   build-depends:
     base >=4.7 && <5,
-    -- just for cabal-docspec
+    -- keeping cabal-docspec happy
     QuickCheck >=2.14 && <3
   exposed-modules:
     NumHask
