--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -1,6 +1,15 @@
 on: [push]
 name: haskell-ci
 jobs:
+  hlint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: haskell/actions/hlint-setup@v2
+    - uses: haskell/actions/hlint-run@v2
+      with:
+        path: .
+        fail-on: warning
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -26,10 +35,6 @@ jobs:
             ghc: '9.6.1'
             experimental: true
             ormolu: true
-          - os: ubuntu-latest
-            ghc: '9.6.1'
-            experimental: true
-            ormolu: hlint
     continue-on-error: true
     name: ghc ${{ matrix.ghc }} ${{ matrix.os }}
     steps:
@@ -58,12 +63,6 @@ jobs:
       - if: matrix.ormolu
         name: ormolu
         uses: haskell-actions/run-ormolu@v11
-      - if: matrix.hlint
-        name: hlint
-        uses: rwe/actions-hlint-run@v2
-        with:
-          path: .
-          fail-on: warning
       - name: cabal build
         run: |
           cabal update
