--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -40,6 +40,7 @@ jobs:
             ghc-version: '9.6'
             docspec: true
             experimental: true
+            name: docspec
 
     steps:
       - uses: actions/checkout@v3
