--- a/numhask.cabal
+++ b/numhask.cabal
@@ -27,7 +27,7 @@ description:
 
 build-type: Simple
 tested-with:
-    GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.5 || ==9.6.2
+    GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.5 || ==9.6.2 || ==9.8.1
 extra-doc-files:
     ChangeLog.md
     other/*.svg
@@ -127,6 +127,7 @@ library
         NumHask.Algebra.Ring
         NumHask.Data.Complex
         NumHask.Data.Integral
+        NumHask.Data.Positive
         NumHask.Data.Rational
         NumHask.Data.Wrapped
         NumHask.Exception
