--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: haskell/actions/hlint-setup@v2
-    - uses: haskell/actions/hlint-run@v2
+    - uses: haskell-actions/hlint-setup@v2
+    - uses: haskell-actions/hlint-run@v2
       with:
         path: .
         fail-on: warning
@@ -14,12 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: haskell-actions/run-ormolu@v11
-  stack:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: freckle/stack-action@v4
+      - uses: haskell-actions/run-ormolu@v14
   cabal:
     name: GHC ${{ matrix.ghc-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -27,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ghc-version: ['9.6', '9.4', '9.2', '9.0', '8.10', '8.8', '8.6']
+        ghc-version: ['9.8', '9.6', '9.4', '9.2', '8.10']
         docspec: [false]
         experimental: [false]
 
@@ -46,7 +41,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up GHC ${{ matrix.ghc-version }}
-        uses: haskell/actions/setup@v2
+        uses: haskell-actions/setup@v2
         id: setup
         with:
           ghc-version: ${{ matrix.ghc-version }}
@@ -90,9 +85,6 @@ jobs:
       - name: Build
         run: cabal build all
 
-      - name: Run tests
-        run: cabal test all
-
       - name: Check cabal file
         run: cabal check
 
@@ -107,4 +99,4 @@ jobs:
           rm -f cabal-docspec.xz
           chmod a+x $HOME/.cabal/bin/cabal-docspec
           $HOME/.cabal/bin/cabal-docspec --version
-          cabal-docspec --check-properties
+          cabal-docspec
