--- a/numhask.cabal
+++ b/numhask.cabal
@@ -27,7 +27,7 @@ description:
 
 build-type: Simple
 tested-with:
-    GHC ==9.2.8 || ==9.4.5 || ==9.6.2 || ==9.8.1
+    GHC ==9.4.8 || ==9.6.4 || ==9.8.1
 extra-doc-files:
     ChangeLog.md
     other/*.svg
