--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -4,7 +4,7 @@ jobs:
   hlint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: haskell-actions/hlint-setup@v2
     - uses: haskell-actions/hlint-run@v2
       with:
@@ -13,8 +13,8 @@ jobs:
   ormolu:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: haskell-actions/run-ormolu@v14
+      - uses: actions/checkout@v4
+      - uses: haskell-actions/run-ormolu@v15
   cabal:
     name: GHC ${{ matrix.ghc-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -22,17 +22,17 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ghc-version: ['9.8', '9.6', '9.4']
+        ghc-version: ['9.10', '9.8', '9.6', '9.4', '9.2']
         docspec: [false]
         experimental: [false]
 
         include:
           - os: windows-latest
-            ghc-version: '9.6'
+            ghc-version: '9.8'
           - os: macos-latest
-            ghc-version: '9.6'
+            ghc-version: '9.8'
           - os: ubuntu-latest
-            ghc-version: '9.6'
+            ghc-version: '9.8'
             docspec: true
             experimental: true
             name: docspec
@@ -93,8 +93,8 @@ jobs:
         run: |
           mkdir -p $HOME/.cabal/bin
           echo "$HOME/.cabal/bin" >> $GITHUB_PATH
-          curl -sL https://github.com/phadej/cabal-extras/releases/download/cabal-docspec-0.0.0.20230406/cabal-docspec-0.0.0.20230406-x86_64-linux.xz > cabal-docspec.xz
-          echo '68fa9addd5dc453d533a74a763950499d4593b1297c9a05c3ea5bd1acc04c9dd cabal-docspec.xz' | sha256sum -c -
+          curl -sL https://github.com/phadej/cabal-extras/releases/download/cabal-docspec-0.0.0.20240414/cabal-docspec-0.0.0.20240414-x86_64-linux.xz > cabal-docspec.xz
+          echo '2d18a3f79619e8ec5f11870f926f6dc2616e02a6c889315b7f82044b95a1adb9 cabal-docspec.xz' | sha256sum -c -
           xz -d < cabal-docspec.xz > $HOME/.cabal/bin/cabal-docspec
           rm -f cabal-docspec.xz
           chmod a+x $HOME/.cabal/bin/cabal-docspec
